# fishregression

./: Dockerfile  Start.ipynb  pyproject.toml
note/: LineRegression.ipynb
src/fishregression/: cli.py  main.py
src/fishregression/model/: manager.py  model1.pkl
