[project]
name = "fishregression"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "EstherCho-7", email = "dkgkqm777@gmail.com"},
]
dependencies = [
    "fastapi>=0.112.2",
    "scikit-learn>=1.3.2",
    "uvicorn[standard]>=0.30.6"
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
note=[
    "notebook>=7.2.2",
    "matplotlib>=3.7.5",
]
test=[
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0"
]

[tool.pdm]
distribution = false
